# ibus-european-table

ibus-european-table/: AUTHORS  Makefile  Makefile.am  Makefile.in  README  config.status  configure  configure.ac  ibus-european-table.pc.in  ibus-european-table.spec.in
ibus-european-table/data/: Makefile.am  Makefile.in
ibus-european-table/engine/: Makefile.am  Makefile.in  european-table.xml.in  european-table.xml.in.in  european_table.py  factory.py  ibus-engine-european-table.in  ibus-european-table-createdb.in  main.py  tabcreatedb.py  tabdict.py  tabsqlitedb.py
ibus-european-table/european-tables/: Makefile  Makefile.am  Makefile.in
ibus-european-table/european-tables/additional/: Makefile.am  Makefile.in
ibus-european-table/icons/: Makefile  Makefile.am  Makefile.in
ibus-european-table/m4/: Makefile
ibus-european-table/po/: Makefile  POTFILES.in  ibus-european-table.pot  zh_CN.gmo  zh_CN.po  zh_HK.gmo  zh_HK.po
